src/objects/KS_Condicion_Comercial__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Condiciones comerciales de SAP para el cálculo de precios en ofertas.</description>
    <fields>
        <fullName>KS_Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Cantidad_Base__c</fullName>
        <label>Cantidad Base</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_Jerarquia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente/Jerarquia</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>KS_Descuentos_Tarifa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Condicion__c</fullName>
        <label>Condicion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Descuento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_CountryCode__c</fullName>
        <label>Código País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ISOCountryCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Escala_Importe__c</fullName>
        <label>Escala Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Escala_Unidades__c</fullName>
        <label>Escala Unidades</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_Fin__c</fullName>
        <label>Fecha Fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_Inicio__c</fullName>
        <label>Fecha Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_ID_condicion_comercial__c</fullName>
        <description>Campo interno &quot;sin uso&quot; útil al no ser necesario hacer UPDATE
Se usa a nivel de APEX
Formato: KS_Condicion - KS_Organizacion_Ventas KS_Canal KS_Sector KS_Tarifa - KS_Cliente - KS_NumeroMaterial - KS_JerarquiaProducto1 - KS_JerarquiaProducto2- KS_JerarquiaProducto3 - KS_JerarquiaProducto4 - KS_Serie KS_Subserie KS_Familia - KS_Pais
Cuando no están informados cliente, material o jerarquia pone: 000
Si no está informado pais entonces pone 00
Y en el bloque, serie/subserie/familia, pone 000 por cada campo que no está informado y no se separa con guiones.</description>
        <externalId>true</externalId>
        <inlineHelpText>Formato: KS_Condicion - KS_Organizacion_Ventas KS_Canal KS_Sector KS_Tarifa - KS_Cliente - KS_NumeroMaterial - KS_JerarquiaProducto1 - KS_JerarquiaProducto2- KS_JerarquiaProducto3 - KS_JerarquiaProducto4 - KS_Serie KS_Subserie KS_Familia - KS_Pais</inlineHelpText>
        <label>ID de Condición Comercial (Interno)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_JP1__c</fullName>
        <formula>KS_PRODH1__r.KS_Id_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JP1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_JP2__c</fullName>
        <formula>KS_PRODH2__r.KS_Id_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JP2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_JP3__c</fullName>
        <formula>KS_PRODH3__r.KS_Id_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JP3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Material_Nombre__c</fullName>
        <formula>KS_Material__r.Name + &apos; &apos; + KS_Material__r.KS_Nombre_producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Nombre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Descuentos_Tarifa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <label>Organizacion Ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_PRODH1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRODH1</label>
        <referenceTo>KS_Jerarquia_Producto__c</referenceTo>
        <relationshipName>Descuentos_Tarifa1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_PRODH2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRODH2</label>
        <referenceTo>KS_Jerarquia_Producto__c</referenceTo>
        <relationshipName>Descuentos_Tarifa2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_PRODH3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRODH3</label>
        <referenceTo>KS_Jerarquia_Producto__c</referenceTo>
        <relationshipName>Descuentos_Tarifa3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Porcentaje__c</fullName>
        <label>Porcentaje</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie (Global)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Serie_Gama</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Serie_single__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tarifa__c</fullName>
        <label>Tarifa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tarifa</valueSetName>
        </valueSet>
    </fields>
    <label>Condicion Comercial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Tarifa__c</columns>
        <columns>KS_Condicion__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_PR10</fullName>
        <columns>NAME</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Tarifa__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_CountryCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Tarifa__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>PR10</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Tarifa_Portugal</fullName>
        <columns>NAME</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Material_Nombre__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Subserie__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Tarifa__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <filters>
            <field>KS_Organizacion_Ventas__c</field>
            <operation>equals</operation>
            <value>SI10</value>
        </filters>
        <label>Tarifa Portugal</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDA6</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDA6</value>
        </filters>
        <label>ZDA6</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDA7</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDA7</value>
        </filters>
        <label>ZDA7</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDA8</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <columns>KS_Condicion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDA8</value>
        </filters>
        <label>ZDA8</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDB2</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDB2</value>
        </filters>
        <label>ZDB2</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDB5</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDB5</value>
        </filters>
        <label>ZDB5</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDB6</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDB6</value>
        </filters>
        <label>ZDB6</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDVA</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_Escala_Importe__c</columns>
        <columns>KS_Escala_Unidades__c</columns>
        <columns>KS_Importe__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDVA</value>
        </filters>
        <label>ZDVA</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZDVR</fullName>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_Escala_Unidades__c</columns>
        <columns>KS_Importe__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDVR</value>
        </filters>
        <label>ZDVR</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_ZPN0</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZPN0</value>
        </filters>
        <label>ZPN0</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>PR00_Sin_Tarifa</fullName>
        <columns>NAME</columns>
        <columns>KS_Fecha_Fin__c</columns>
        <columns>KS_Condicion__c</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Tarifa__c</columns>
        <columns>KS_Importe__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <columns>KS_Fecha_Inicio__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>PR00</value>
        </filters>
        <filters>
            <field>KS_Tarifa__c</field>
            <operation>notEqual</operation>
            <value>00,01</value>
        </filters>
        <label>PR00 - Sin Tarifa</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>ZDA8_y_ZDA6</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>KS_Cliente_Jerarquia__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Material__c</columns>
        <columns>KS_Serie__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <columns>KS_JP1__c</columns>
        <columns>KS_JP2__c</columns>
        <columns>KS_JP3__c</columns>
        <columns>KS_JP4__c</columns>
        <columns>KS_Condicion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDA8</value>
        </filters>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDA6</value>
        </filters>
        <label>ZDA8_y_ZDA6</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>ZDB1</fullName>
        <columns>NAME</columns>
        <columns>KS_Condicion__c</columns>
        <columns>KS_Organizacion_Ventas__c</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_PRODH1__c</columns>
        <columns>KS_Serie_single__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Porcentaje__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KS_Condicion__c</field>
            <operation>equals</operation>
            <value>ZDB1</value>
        </filters>
        <filters>
            <field>KS_Material__c</field>
            <operation>equals</operation>
        </filters>
        <label>ZDB1</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>CC{000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condiciones Comerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>